@@ -10,7 +10,6 @@ import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
@@ -57,7 +56,7 @@ class AdminServiceTest extends BookCrossingBaseTests {
                 .hasSize(2)
                 .hasSameElementsAs(users.stream()
                         .map(u -> InfoUsersDto.fromUserDto(u, 0))
-                        .collect(Collectors.toList()));
+                        .toList());
     }
 
     @Test
